--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,7 +3,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url(../img/banner/footer_bg.png);
+    background-image: url(../img/banner/bottomimage.png);
     p{
         font-family: $font2 !important;
     }
