Get rid of banner path in img sources. Fixed Adblocked issue

--- a/scss/_counter.scss
+++ b/scss/_counter.scss
@@ -33,7 +33,7 @@
 }
 
 .home_details{
-    background-image: url(../img/banner/home_details.png);
+    background-image: url(../img/base/home_details.png);
     background-size: cover;
     background-position: center center;
     padding: 140px 0;
