--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -1,8 +1,8 @@
 .slider_bg_1{
-    background-image: url(../img/banner/toppageimage.png);
+    background-image: url(../img/base/toppageimage.png);
 }
 .slider_bg_2{
-    background-image: url(../img/banner/banner_2.png);
+    background-image: url(../img/base/base_2.png);
 }
 .slider_area{
     position: relative;
