--- a/css/style.css
+++ b/css/style.css
@@ -1388,12 +1388,12 @@ h3 {
 
 /* line 1, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/_slider.scss */
 .slider_bg_1 {
-  background-image: url(../img/banner/toppageimage.png);
+  background-image: url(../img/base/toppageimage.png);
 }
 
 /* line 4, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/_slider.scss */
 .slider_bg_2 {
-  background-image: url(../img/banner/banner_2.png);
+  background-image: url(../img/base/base_2.png);
 }
 
 /* line 7, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/_slider.scss */
@@ -1785,7 +1785,7 @@ h3 {
 
 /* line 35, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/_counter.scss */
 .home_details {
-  background-image: url(../img/banner/home_details.png);
+  background-image: url(../img/base/home_details.png);
   background-size: cover;
   background-position: center center;
   padding: 140px 0;
@@ -2644,7 +2644,7 @@ h3 {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url(../img/banner/bottomimage.png);
+  background-image: url(../img/base/bottomimage.png);
 }
 
 /* line 7, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/_footer.scss */
@@ -2797,17 +2797,17 @@ h3 {
 
 /* line 1, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/_bradcam.scss */
 .bradcam_bg_1 {
-  background-image: url(../img/banner/bradcam.png);
+  background-image: url(../img/base/bradcam.png);
 }
 
 /* line 4, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/_bradcam.scss */
 .bradcam_bg_2 {
-  background-image: url(../img/banner/bradcam2.png);
+  background-image: url(../img/base/bradcam2.png);
 }
 
 /* line 7, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/_bradcam.scss */
 .bradcam_bg_3 {
-  background-image: url(../img/banner/bradcam3.png);
+  background-image: url(../img/base/bradcam3.png);
 }
 
 /* line 10, ../../Arafath/CL/Cl November/228. Resume-02/HTML/scss/_bradcam.scss */
