--- a/scss/_bradcam.scss
+++ b/scss/_bradcam.scss
@@ -1,11 +1,11 @@
 .bradcam_bg_1{
-    background-image: url(../img/banner/bradcam.png);
+    background-image: url(../img/base/bradcam.png);
 }
 .bradcam_bg_2{
-    background-image: url(../img/banner/bradcam2.png);
+    background-image: url(../img/base/bradcam2.png);
 }
 .bradcam_bg_3{
-    background-image: url(../img/banner/bradcam3.png);
+    background-image: url(../img/base/bradcam3.png);
 }
 .bradcam_area{
     
