--- a/scss/_testmonial.scss
+++ b/scss/_testmonial.scss
@@ -1,6 +1,6 @@
 
 .testimonial_area{
-    // background-image: url(../img/banner/testmonial.png);
+    // background-image: url(../img/base/testmonial.png);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
